--- a/Report/Anecic Abundance/AnecicAbundance.Rmd
+++ b/Report/Anecic Abundance/AnecicAbundance.Rmd
@@ -7,7 +7,7 @@ date: "`r Sys.Date()`"
 output: 
       html_document:
           toc: true
-          toc_depth: 2
+          toc_depth: 3
           number_sections: true
           fig_caption: true
           theme: cerulean
@@ -20,8 +20,10 @@ knitr::opts_chunk$set(fig.align="center",
                       error=FALSE,
                       warning=FALSE,
                       echo=FALSE)
+knitr::opts_knit$set(root.dir = 'C:/Users/Quentin/Documents/git_repositories/F2_Earthworms')
 
 options(scipen=1, digits=2)
+set.seed(1234)
 ```
 
 
@@ -32,6 +34,10 @@ Sampling took place 3-4 times in two consecutive years. In total 18 sites were s
 9 earthworm species from 3 different ecological groups were identified and weighed.
 
 Here I present the modeling of the abundance data of earthworms from the ecological group of anecic earthworms. 
+
+# Materials and methods  
+
+I use R with RStudio to perform all analyses. For creating reports i use knitr with RStudio.
 
 ## Modeling procedure:
 
@@ -62,11 +68,338 @@ Here I present the modeling of the abundance data of earthworms from the ecologi
 
 * Post-Hoc Multicomparisons are performed using Tukey Test with the glht() function.
 
-
-
-# Materials and methods  
-
 # Analysis
+
+```{r LoadData, results='hide', fig.show='hide'}
+# Load Data
+#setwd("D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/")
+source("Data/GatherSource/Gather1.R") # Includes Correction for Watercontent
+source("Data/GatherSource/Gather2.R")
+source("Data/GatherSource/Gather3.R") # no adult endogeics separated
+source("Data/GatherSource/CNRatio.R") # only for 1st order
+```
+
+```{r RequiredPackages}
+source("Analysis/F2_EW_RequiredPackages.R")
+source("Data/GatherSource/Functions/coldiss.R")
+source("Data/GatherSource/Functions/panelutils.R")
+source("Data/GatherSource/ggplotTheme.R")
+
+lo <- par(mfrow=c(1,1))
+
+overdisp_fun <- function(model) {
+  ## number of variance parameters in 
+  ##   an n-by-n variance-covariance matrix
+  vpars <- function(m) {
+    nrow(m)*(nrow(m)+1)/2
+  }
+  model.df <- sum(sapply(VarCorr(model),vpars))+length(fixef(model))
+  rdf <- nrow(model.frame(model))-model.df
+  rp <- residuals(model,type="pearson")
+  Pearson.chisq <- sum(rp^2)
+  prat <- Pearson.chisq/rdf
+  pval <- pchisq(Pearson.chisq, df=rdf, lower.tail=FALSE)
+  c(chisq=Pearson.chisq,ratio=prat,rdf=rdf,p=pval)
+}
+
+```
+
+
+### Data Pre-Processing  
+#### Standardize Explanatory Variables  
+
+```{r DataProcessing,}
+
+## Create variable d(delta)samcam as the time difference of each sampling date to the first date, that each field was sampled; first date is Zero for all fields. ####
+data$dsamcam <- with(data, round(c(rep(0,60),date[61:120]-date[1:60],date[121:180]-date[1:60]),0))
+
+## Standardize all explanatory variables ####
+
+# extract all numerical variables
+std.var <- data[sapply(data,is.numeric)]
+# exclude all response variables
+std.var <- std.var[,-c(7:30,49:58)]
+
+# standardize, each column is divided by their standard deviation, and the mean of each column is subtracted 
+std.var <- as.data.frame(scale(std.var, center=TRUE, scale=TRUE))
+colnames(std.var) <- paste("scl", colnames(std.var), sep = ".") # rename columns
+
+data$area <- rep(0.25,180)
+
+data <- cbind(data, std.var)
+
+
+# Ordered or not??
+# Since i found it too difficult to handle, i used non-ordered factors
+data$age_class <- factor(data$age_class, ordered=TRUE)
+data$samcam <- factor(data$samcam, ordered=FALSE)
+
+#----
+```
+
+
+### Anecic Abundance
+********************
+
+#### Assess variability in random effects
+```{r BoxPlots,echo=FALSE}
+
+# Variability within sites
+boxplot(anc~field.ID, data, col="grey", main="Variability within sites", xlab="sites orderd in decreasing age", ylab="anecic earthworm abundance")
+
+# variability within sampling campaigns
+boxplot(anc~samcam, data,col="grey", main="Variability within sampling campaigns", xlab="seasons:\n autumn2012, spring2013, autumn2013", ylab="anecic earthworm abundance")
+
+# variability within sites and sampling campaigns
+boxplot(anc~field.ID+samcam, data, las=2, col="grey", main="Variability within sites \n differing at sampling campaigns", xlab="field+seasons", ylab="anecic earthworm abundance")
+```
+  
+
+#### GLMM using glmmADMB
+
+
+##### Model Formulation
+
+Find the best model using function dredge(). Begin with three different global models.
+```{r GLMM_anc, cache=TRUE, echo=TRUE}
+# Global Model
+
+# str(data)
+
+# Model Formulation
+anc.glob1 <- glmmadmb(anc ~ age_class*samcam + scl.mc + scl.pH*scl.cn  +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+anc.glob2 <- glmmadmb(anc ~ age_class*samcam + I(scl.mc^2) + scl.pH*scl.cn  +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+anc.glob3 <- glmmadmb(anc ~ age_class*samcam + I(scl.ats1^2) + scl.pH*scl.cn  +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+# offsset is used due to the personal advice by T. Onkelinx:
+# You better use an offset if you want to express the model in terms of m². Just add offset(log(0.25)) to the model. 
+
+# summary(anc.glob3)
+
+# Overdispersion
+E1 <- resid(anc.glob3, type="pearson")
+N <- nrow(data)
+p <- length(coef(anc.glob3)) # The Plus "+1" used for determining the number of parameters(p) is due to the "k" of negative 
+                              # binomial distribution
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+
+## Multimodel averaging ####
+#anc.dredge1 <- dredge(anc.glob1)
+#anc.dredge2 <- dredge(anc.glob2)
+#anc.dredge3 <- dredge(anc.glob3)
+#head(anc.dredge3,10)
+#head(anc.dredge2,10)
+#head(anc.dredge,10)
+#####
+````
+
+Fit the best model
+```{r BestModel, cache=TRUE}
+# The best model with both glmer() and glmmadmb():
+# anc.best <- glmer(anc ~ age_class*samcam + I(scl.ats1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+anc.best <- glmmadmb(anc ~ age_class*samcam + I(scl.ats1^2) +  (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+````
+
+**The best model includes an Interaction term!!!**
+
+
+Summary output
+```{r BestModel_Summaries, echo=TRUE}
+# summary
+summary(anc.best)
+
+# Anova
+summary(aov(anc.best))
+````
+
+A former "best model" with humidity as significant term and age_class as ordered factor, found using dredge was
+anc.best <- glmmadmb(anc ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+
+##### Model Validation
+```{r ModelValidation1_anc, echo=TRUE}
+# Confidence Intervals
+confint(anc.best)
+coefplot2(anc.best)
+
+
+## Model validation ####
+E1 <- resid(anc.best, type="pearson")
+F1 <- fitted(anc.best, type="response")
+
+# Dataset with all variables IN the model
+env1 <- cbind(E1, F1, data[,c("anc", "age_class", "samcam", "ats1")]) # should "ats1" be squared?
+
+# covariates NOT in the model
+env0 <- cbind(E1, F1,data[,c("mc", "pH", "cn", "clay", "ats2", "hum1","dgO")])
+
+# plot residual versus all covariates in the model
+par(mfrow=c(2,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:length(env1)) {
+  scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i])
+  abline(h=0, lty=2, col="red")
+}
+par(mfrow=c(1,1))
+
+# plot residual versus all covariates NOT in the model
+par(mfrow=c(3,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:length(env0)) {
+  scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
+  abline(h=0, lty=2, col="red")
+}
+par(mfrow=c(1,1))
+
+# Overdispersion
+N <- nrow(data)
+p <- length(coef(anc.best)) # +1 in case of negbin
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+# glmer has less dispersion
+
+overdisp_fun(anc.best)
+#####
+
+# Deviance
+logLik(anc.best) 
+
+# Fraction of explained variation in the response variable
+100*((anc.best$null.deviance-anc.best$deviance)/anc.best$null.deviance) # failed
+
+
+# Plots of Predicted Values
+par(mfrow=c(2,2))
+plot(data$age_class,predict(anc.best, type="response"))
+plot(data$samcam,predict(anc.best, type="response"))
+plot(data$ats1^2,predict(anc.best, type="response"))
+plot(data$hum1^2,predict(anc.best, type="response"))
+
+# Plots of fitted Values
+par(mfrow=c(2,2))
+plot(data$age_class,F1)
+plot(data$samcam,F1)
+plot(data$ats1^2,F1)
+
+par(lo)
+```
+
+Model validation 2, what is the meaning of that all?
+```{r ModelValidation2_anc,fig.width=8, fig.height=7, echo=TRUE}
+# Model Validation 
+
+E <- resid(anc.best, type="pearson")
+
+par(mfrow=c(2,2))
+par(mar=c(5,5,2,3))
+plot(E~fitted(anc.best), ylab="Pearson Residuals", xlab="Fitted values") 
+abline(h=0, lty=2)
+hist(E, main = "", breaks = 20, cex.lab = 1.5, xlab = "Pearson Residuals")
+plot(E ~ data$age_class, ylab="Pearson Residuals", xlab="Age Class")
+abline(h=0, lty=2)
+plot(E ~ data$ats1, ylab="Pearson Residuals", xlab="Average Temperature (30d, 5cm)")
+abline(h=0, lty=2)
+# Cooks Distances?
+
+````
+
+##### Post-Hoc Multicomparisons
+```{r PostHocMulticomparisons_anc, echo=TRUE, cache=TRUE}
+# Model with the interaction term
+data$ia.acl.smc <- interaction(data$age_class, data$samcam)
+anc.tukey <- glmmadmb(anc ~ ia.acl.smc + I(scl.ats1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+# summary(anc.tukey)
+
+
+# Pairwise comparisons
+anc.pairwise <- glht(anc.best, mcp(age_class = "Tukey"))
+anc.pw.ci <- confint(anc.pairwise)
+
+# Confidence intervals including 0
+anc.pw.sig <- which(anc.pw.ci$confint[,2]>0)
+data.frame(names(anc.pw.sig))
+
+
+# Plot Errorbars
+ggplot(anc.pw.ci, aes(y = lhs, x = exp(estimate), xmin = exp(lwr), xmax = exp(upr))) + 
+  geom_errorbarh() + 
+  geom_point() + 
+  geom_vline(xintercept = 1) +
+  mytheme
+
+# plot confidence intervals
+par(mar=c(2,15,2,2))
+plot(anc.pw.ci) # only maize is significantly different from all SIlphie fields. Within SIlphie there are no differences
+
+```
+
+##### Extract Predictions and plot predictions with error bars
+```{r ExtractPredicitons, echo=TRUE}
+
+# create test data set with all covariates IN the model
+anc.td = expand.grid(age_class=unique(data$age_class),
+                     samcam = unique(data$samcam),               
+                     scl.ats1 = mean(data$scl.ats1),
+                     area = 1)
+
+# calculate confidence intervals for predictions from test dataset
+anc.pred <- cbind(anc.td, predict(anc.best, newdata = anc.td, interval = "confidence")) 
+
+# Rename samcam for facetting
+anc.pred$samcam2 <- plyr::revalue(anc.td$samcam,c("1" ="autumn 2012",  "2" ="spring 2013", "3"="autumn 2013"))
+
+
+# plot predictions with error bars // confidence intervals???
+ggplot(anc.pred, aes(x = age_class, y = exp(fit), ymin = exp(lwr), ymax = exp(upr))) + 
+  geom_bar(stat="identity",position = position_dodge(1), col="454545", fill="grey") +
+  geom_errorbar(position = position_dodge(1),col="black",width=0.15, size=0.15) + 
+  facet_grid(.~samcam) +
+  geom_hline(xintercept = 1) +
+  ylab("Abundance Ind./m²") +
+  xlab("Age Class") +
+  scale_x_discrete(labels=c("Cm", "Sp_Y", "Sp_I1", "Sp_I2", "Sp_O")) +
+  mytheme
+
+# Claculate a whole lot of coefficients and statistics
+anc.pred <- within(anc.pred, {
+  AIC <- AIC(anc.best)
+  Rrandom <- summary(lm(fitted(anc.best)~ data$anc))$adj.r.squared
+  Rsquared <- summary(lm(predict(anc.best, type="response")~ data$anc))$adj.r.squared  
+})
+head(anc.pred)
+
+anc.stat = round(summary(anc.best)$coefficients[, c(3,4)],4)
+anc.coef = coeftab(anc.best)
+
+anc.env <- glmmadmb(anc ~ samcam + I(ats1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+anc.pvalue <- anova(anc.env, anc.best)$"Pr(>Chi)"
+
+anc.OUT1 = anc.pred
+anc.OUT2 = cbind(anc.stat,anc.coef,LogLikP=anc.pvalue[2],fixef=fixef(anc.best))
+anc.OUT1
+anc.OUT2
+````
+
+```{r WriteOut}
+#write.table(anc.OUT1, "Predictions+Stats+ConfIntervals.csv", sep=";", append=TRUE)
+#write.table(anc.OUT2, "Predictions+Stats+ConfIntervals.csv", sep=";", append=TRUE)
+```
+
+##### Prediction plots for average temperature!
+```{r PredictionPlot2}
+anc.td = expand.grid(age_class=unique(data$age_class),
+                     samcam = unique(data$samcam),               
+                     scl.ats1 = seq(min(data$scl.ats1),max(data$scl.ats1), by=0.2),
+                     area = 1)
+
+anc.pred <- cbind(anc.td, predict(anc.best, newdata = anc.td, interval = "confidence")) 
+
+ggplot(anc.pred, aes(x = scl.ats1, y = exp(fit), ymin = exp(lwr), ymax = exp(upr),col=samcam)) + 
+  geom_errorbar(position = position_dodge(1)) + 
+  geom_point(position = position_dodge(1)) +
+  facet_grid(.~age_class) +
+  mytheme
+```
+
 
 # Results
 
