--- a/Analysis/F2_EW_MainAnalysis.Rmd
+++ b/Analysis/F2_EW_MainAnalysis.Rmd
@@ -1736,8 +1736,10 @@ xyplot(endo.bm~cn|pH,data=data)
 
 
 ##### Model Formulation
-```{r GLMM_anc, cache=TRUE}
-# Global Model
+
+Global Model and Multimodel Inference
+```{r GLMM_anc, cache=TRUE, eval=FALSE}
+## check data ####
 str(data)
 
 # Percentage of zero values in biomass data for anecic earthworms
@@ -1749,34 +1751,51 @@ datax <- subset(data, endo.bm>0)
 # Outliers in CN ratio
 which(data$cn>15)
 data[which(data$cn>15),]$field
-# eliminate Outliers
+
+# Eliminate outliers
 datay <- data[data$field!="EF_2011",]
+#####
 
-# Model Formulation
-# First off, let's start with what a significant continuous by continuous interaction means. It means that the slope of one continuous variable on the response variable changes as the values on a second continuous change.
 
-# Gamma distribution without zero values
+
+## Global Model Formulation ####
+## Formulate several global models with regard to Collinearity in environmental variables, outliers and zero values
+## [Note: First off, let's start with what a significant continuous by continuous interaction means. It means that the slope of one continuous variable on the response variable changes as the values on a second continuous change.]
+
+# Gamma Distribution
+####################
+
+# without zero values // -> hurdle models??
+## with soil moisture
 endo.bm.glob1 <- glmmadmb(endo.bm ~ age_class*samcam + scl.mc + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=datax,family="gamma")
 
-# Gamma distribution adding small values to Zero 
+# adding small values to Zero 
+## With soil moisture
 endo.bm.glob2 <- glmmadmb(I(endo.bm+0.0001) ~ age_class*samcam + scl.mc + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="gamma")
 
+## With average Temperature and humidity
+endo.bm.glob3 <- glmmadmb(I(endo.bm+0.0001) ~ age_class*samcam + I(scl.ats1^2) + scl.hum1 + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="gamma")
+
 # Normal distribution
+#####################
+
+## With soil moisture
+## With total data
 endo.bm.glob3 <- glmmadmb(endo.bm ~ age_class*samcam + scl.mc + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="gaussian")
-
+# without zero biomass 
 endo.bm.glob4 <- glmmadmb(endo.bm ~ age_class*samcam + scl.mc + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=datax,family="gaussian")
-
+# without outliers for cn
 endo.bm.glob5 <- glmmadmb(endo.bm ~ age_class*samcam + scl.mc + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=datay,family="gaussian")
 
-endo.bm.glob6 <- glmmadmb(I(endo.bm+0.0001) ~ age_class*samcam + I(scl.ats1^2) + scl.hum1 + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=datay,family="gamma")
-
-# Normal distribution
+## With Average Temperature
+## With total data
 endo.bm.glob7 <- glmmadmb(endo.bm ~ age_class*samcam + I(scl.ats1^2) + scl.hum1 + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="gaussian")
 
-# offsset is used due to the personal advice by T. Onkelinx:
-# You better use an offset if you want to express the model in terms of m². Just add offset(log(0.25)) to the model. 
+# offset is used due to personal advice by T. Onkelinx:
+# "You better use an offset if you want to express the model in terms of m². Just add offset(log(0.25)) to the model."
+#####
 
-# Multimodel averaging
+## Multimodel averaging ####
 endo.bm.dredge1 <- dredge(endo.bm.glob1)
 endo.bm.dredge2 <- dredge(endo.bm.glob2)
 endo.bm.dredge3 <- dredge(endo.bm.glob3)
@@ -1785,27 +1804,39 @@ endo.bm.dredge5 <- dredge(endo.bm.glob5)
 endo.bm.dredge6 <- dredge(endo.bm.glob6)
 endo.bm.dredge7 <- dredge(endo.bm.glob7)
 head(endo.bm.dredge1,10)
-head(endo.bm.dredge2,10)
+head(endo.bm.dredge2,10) # best AICc + total data
 head(endo.bm.dredge3,10)
 head(endo.bm.dredge4,10)
 head(endo.bm.dredge5,10)
 head(endo.bm.dredge6,10)
 head(endo.bm.dredge7,10)
-
-# The best model with both glmer() and glmmadmb():
-# endo.bm.best <- glmer(endo.bm ~ age_class*samcam + I(scl.ats1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
-
-endo.bm.best <- glmmadmb(I(endo.bm+0.0001) ~ age_class + scl.pH + (1|field.ID) + offset(log(area)) ,data=data[-c(69,70,71,72),],family="gamma") 
-
-endo.bm.best2 <- glmmadmb(endo.bm ~ age_class + scl.mc + (1|field.ID) + offset(log(area)) ,data=data,family="gaussian", zeroInflation=TRUE) 
+#####
 ````
+
+Fit the best model
+```{r, eval=-2, cache=TRUE}
+# The best model with both glmer() and glmmadmb():
+endo.bm.best <- glmer(I(endo.bm+0.0001) ~ age_class + scl.pH + (1|field.ID) + offset(log(area)), data=data, family=Gamma)
+
+endo.bm.best <- glmmadmb(I(endo.bm+0.0001) ~ age_class + scl.pH + (1|field.ID) + offset(log(area)) ,data=data, family="gamma") 
+
+# To exclude large fitted values: data[-c(69,70,71,72),]
+````
+
+Summary output
+```{r EndoBmSummary}
+# Summary output
+summary(endo.bm.best)
+
+# ANOVA output
+summary(aov(endo.bm.best))
+```
 
 
 ##### Model Validation
-```{r ModelValidation1_anc}
-summary(endo.bm.best)
-summary(aov(endo.bm.best))
 
+```{r ModelValidation1_anc}
+# Confidence Intervals
 confint(endo.bm.best)
 coefplot2(endo.bm.best)
 
@@ -1814,84 +1845,79 @@ E1 <- resid(endo.bm.best, type="response")
 F1 <- fitted(endo.bm.best, type="response")
 P1 <- predict(endo.bm.best, type="response")
 
-plot(F1, E1)
+# Check Model outputs
+par(mfrow=c(2,2),
+    mar=c(4,4.5,1,2))
+# Plot fitted vs. residuals
+scatter.smooth(F1, E1, cex.lab = 1.5, ylab=" Residuals", xlab="Fitted values")
 abline(h = 0, v=0, lty=2)
 data$field[[69]]
 
-plot(F1, P1)
+# plot fitted vs. predicted
+scatter.smooth(F1, P1, cex.lab = 1.5, ylab=" Residuals", xlab="Predicted values")
 abline(h = 0, v=0, lty=2)
 
-plot(data$pH, E1)
-abline(h = 0, v=0, lty=2)
+# Histogram of Residuals
+hist(E1, prob=TRUE, main = "", breaks = 20, cex.lab = 1.5, xlab = "Response Residuals", col="PapayaWhip")
+lines(density(E1), col="light blue", lwd=3)
+lines(density(E1, adjust=2), lty="dotted", col="darkgreen", lwd=2) 
+
+par(lo)
 
 # negative fitted values:
 which(F1<0)
 
-# Dataset with all variables IN the model
-env1 <- cbind(E1, F1, data[-c(69,70,71,72),c("endo.bm", "age_class", "pH", "mc")])
-# covariates NOT in the model
-env0 <- cbind(E1, F1,data[-c(69,70,71,72),c(  "cn", "clay", "ats1", "hum1")])
-env01 <- cbind(E1, F1,data[-c(69,70,71,72),c(  "ats2" ,"dgO", "samcam")])
+## Residuals vs. covariates ####
 
-# plot residual versus all covariates in the model
-par(mfrow=c(3,2),
+# Dataset with all covariates IN the model
+env1 <- cbind(E1, data[,c("endo.bm", "age_class", "pH")])
+# covariates NOT in the model
+env0 <- cbind(E1, data[,c(  "cn", "clay", "mc","samcam")])
+env01 <- cbind(E1, data[,c(  "ats1", "ats2" ,"hum1", "dgO")])
+
+# plot residual versus all covariates in the model 
+par(mfrow=c(2,2),
      mar=c(3.8,4,1,3))
-for (i in 1:length(env1)) {
+for (i in 2:length(env1)) {
   scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i], ylab="Residuals")
   abline(h=0, lty=2, col="red")
 }
-par(mfrow=c(1,1))
 
 # plot residual versus all covariates NOT in the model
-par(mfrow=c(2,3),
+par(mfrow=c(2,2),
     mar=c(3.8,4,1,3))
-for (i in 1:length(env0)) {
+for (i in 2:length(env0)) {
   scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
   abline(h=0, lty=2, col="red")
 }
-par(mfrow=c(1,1))
 
-par(mfrow=c(2,3),
+par(mfrow=c(2,2),
     mar=c(3.8,4,1,3))
-for (i in 1:length(env01)) {
+for (i in 2:length(env01)) {
   scatter.smooth(env01[,i],env01[,1], xlab=colnames(env01)[i])
   abline(h=0, lty=2, col="red")
 }
 par(mfrow=c(1,1))
+#####
 
+## Some more plots ####
 # Plots of Predicted Values
 par(mfrow=c(2,2))
-plot(data$age_class,predict(endo.bm.best, type="response"))
-plot(data$samcam,predict(endo.bm.best, type="response"))
-plot(data$mc,predict(endo.bm.best, type="response"))
-plot(data$pH,predict(endo.bm.best, type="response"))
+plot(data$age_class,P1, ylab="Predicted values")
+plot(data$samcam,P1, ylab="Predicted values")
+plot(data$pH,P1, ylab="Predicted values")
+
+
 
 # Plots of fitted Values
 par(mfrow=c(2,2))
-plot(data$age_class,F1)
-plot(data$samcam,F1)
-plot(data$mc,F1)
-plot(data$pH,F1)
+plot(data$age_class,F1, ylab="Fitted values")
+plot(data$samcam,F1, ylab="Fitted values")
+plot(data$pH,F1, ylab="Fitted values")
 
 par(lo)
+#####
 ```
-
-Model validation 2
-```{r ModelValidation2_endo.bm,fig.width=8, fig.height=7}
-# Model Validation 
-
-E <- resid(endo.bm.best, type="response")
-
-par(mfrow=c(2,2))
-par(mar=c(5,5,2,3))
-plot(E~fitted(endo.bm.best), ylab=" Residuals", xlab="Fitted values") 
-abline(h=0, lty=2)
-hist(E, main = "", breaks = 20, cex.lab = 1.5, xlab = "Response Residuals")
-plot(E ~ data$age_class, ylab="Residuals", xlab="Age Class")
-abline(h=0, lty=2)
-plot(E ~ I(data$ats1^2), ylab="Residuals", xlab="Average temperature (30d)")
-abline(h=0, lty=2)
-````
 
 
 ##### Post-Hoc Multicomparisons
@@ -1900,7 +1926,7 @@ abline(h=0, lty=2)
 endo.bm.pairwise <- glht(endo.bm.best, mcp(age_class = "Tukey"))
 endo.bm.pw.ci <- confint(endo.bm.pairwise)
 
-names(endo.bm.pw.ci)
+# Confidence intervals including zero
 endo.bm.pw.sig <- which(endo.bm.pw.ci$confint[,2]>0)
 data.frame(names(endo.bm.pw.sig))
 
@@ -1913,7 +1939,6 @@ ggplot(endo.bm.pw.ci, aes(y = lhs, x = exp(estimate), xmin = exp(lwr), xmax = ex
   mytheme
 
 # plot confidence intervals
-
 par(mar=c(2,15,2,2))
 plot(endo.bm.pw.ci) # only maize is significantly different from all SIlphie fields. Within SIlphie there are no differences
 
@@ -1922,16 +1947,16 @@ plot(endo.bm.pw.ci) # only maize is significantly different from all SIlphie fie
 
 ##### Extract Predictions and plot predictions with error bars
 ```{r ExtractPredicitons}
+# create test data set with all covariates IN the model
+# to predict for age_class only, take the mean of all continous covariates
 endo.bm.td = expand.grid(age_class=unique(data$age_class),
                         scl.pH = mean(data$scl.ats1),
                         area = 1)
 
+# calculate confidence intervals for predictions from test dataset
 endo.bm.pred <- cbind(endo.bm.td, predict(endo.bm.best, newdata = endo.bm.td, interval = "confidence")) 
 
-data$samcam2 <-  data$samcam # duplicate variable samcam to change facet labels
-#revalue
-
-
+# plot predictions with error bars // confidence intervals???
 ggplot(endo.bm.pred, aes(x = age_class, y = exp(fit), ymin = exp(lwr), ymax = exp(upr))) + 
   geom_bar(stat="identity",position = position_dodge(1), col="454545", fill="grey") +
   geom_errorbar(position = position_dodge(1),col="black",width=0.15, size=0.15) + 
@@ -1940,8 +1965,12 @@ ggplot(endo.bm.pred, aes(x = age_class, y = exp(fit), ymin = exp(lwr), ymax = ex
   xlab("Age Class") +
   scale_x_discrete(labels=c("Cm", "Sp_Y", "Sp_I1", "Sp_I2", "Sp_O")) +
   mytheme
+````
 
 
+Coefficients and Statistics
+```{r}
+# Claculate a whole lot of coefficients and statistics
 endo.bm.pred <- within(endo.bm.pred, {
   AIC <- AIC(endo.bm.best)
   Rrandom <- summary(lm(fitted(endo.bm.best)~ data$endo.bm))$adj.r.squared
@@ -1957,6 +1986,8 @@ endo.bm.pvalue <- anova(endo.bm.env, endo.bm.best)$"Pr(>Chi)"
 
 endo.bm.OUT1 = endo.bm.pred
 endo.bm.OUT2 = cbind(endo.bm.stat,endo.bm.coef,LogLikP=endo.bm.pvalue[2],fixef=fixef(endo.bm.best))
+endo.bm.OUT1
+endo.bm.OUT2
 ````
 
 ```{r WriteOut}
@@ -1966,7 +1997,7 @@ endo.bm.OUT2 = cbind(endo.bm.stat,endo.bm.coef,LogLikP=endo.bm.pvalue[2],fixef=f
 
 ```{r PredictionPlot2}
   endo.bm.td = expand.grid(age_class=unique(data$age_class),
-                     scl.ats1 = seq(min(data$scl.ats1),max(data$scl.ats1),by=0.2),
+                     scl.pH = seq(min(data$scl.pH),max(data$scl.PH),by=0.2),
                      area = 1)
 
   endo.bm.pred <- cbind(	endo.bm.td, predict(	endo.bm.best, newdata = 	endo.bm.td, interval = "confidence")) 
@@ -1975,27 +2006,6 @@ ggplot(	endo.bm.pred, aes(x = scl.ats1, y = exp(fit), ymin = exp(lwr), ymax = ex
   geom_errorbar(position = position_dodge(1)) + 
   geom_point(position = position_dodge(1)) +
   facet_grid(.~age_class) +
-  mytheme
-```
-
-
-```{r}
-endo.bm.td = expand.grid(age_class=unique(data$age_class),
-                        area = 1)
-
-endo.bm.pred <- cbind(endo.bm.td, predict(endo.bm.best2, newdata = endo.bm.td, interval = "confidence")) 
-
-data$samcam2 <-  data$samcam # duplicate variable samcam to change facet labels
-#revalue
-
-
-ggplot(endo.bm.pred, aes(x = age_class, y = exp(fit), ymin = exp(lwr), ymax = exp(upr))) + 
-  geom_bar(stat="identity",position = position_dodge(1), col="454545", fill="grey") +
-  geom_errorbar(position = position_dodge(1),col="black",width=0.15, size=0.15) + 
-  geom_hline(xintercept = 1) +
-  ylab("Biomass [g]") +
-  xlab("Age Class") +
-  scale_x_discrete(labels=c("Cm", "Sp_Y", "Sp_I1", "Sp_I2", "Sp_O")) +
   mytheme
 ```
 
